--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -2,3 +2,12 @@
   color-scheme: light dark;
   background-color: #242424;
 }
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: inline-block;
+  margin-right: 10px;
+}
