--- a/personal-website/src/Snake/css/Board.css
+++ b/personal-website/src/Snake/css/Board.css
@@ -14,3 +14,9 @@
     border: 2px solid green;
     background-color: grey;
 }
+
+.player-square {
+    height: 50px;
+    width: 50px;
+    background-color: purple;
+}
