--- a/personal-website/src/Loans/css/loan-landing.css
+++ b/personal-website/src/Loans/css/loan-landing.css
@@ -20,13 +20,14 @@ body, html{
 .loan-input {
     height: 20%;
     width: 30%;
-    background-color: white;
+    background-color: #626C66;
+    box-shadow: inset 0 0 100px hsla(0,0%,0%,.2);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    color: black;
+    color: #E6B84D;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     z-index: 5;
 }
@@ -38,10 +39,22 @@ body, html{
     align-items: center;
     font-size: 40px;
     font-weight: 500;
+    text-shadow: 10px;
 }
 
 .get-started {
     height: 50%;
+}
+
+@keyframes load-button {
+    from { 
+        opacity: 0%; 
+        visibility: hidden;
+    }
+    to { 
+        opacity: 100%; 
+        visibility: visible;
+    }
 }
 
 .get-started-button {
@@ -52,6 +65,11 @@ body, html{
     background-color: #222222;
     cursor: pointer;
     transition: .2s;
+    animation-fill-mode: forwards;
+    animation-name: load-button;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    visibility: hidden;
 }
 
 .get-started-button:hover {
