--- a/personal-website/src/Loans/css/loan-landing.css
+++ b/personal-website/src/Loans/css/loan-landing.css
@@ -8,7 +8,7 @@ body, html{
 .main {
     height: 100vh;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     padding: 0;
     margin: 0;
@@ -20,7 +20,7 @@ body, html{
 .loan-input {
     height: 20%;
     width: 30%;
-    background-color: #626C66;
+    background-color: rgba(98, 108, 102, .95);
     box-shadow: inset 0 0 100px hsla(0,0%,0%,.2);
     display: flex;
     flex-direction: column;
@@ -32,14 +32,23 @@ body, html{
     z-index: 5;
 }
 
+.header:before  {
+    opacity: 50%;
+}
+
 .header {
+    top: 20vh;
+    left: 45%;
     height: 50%;
+    opacity: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 40px;
+    font-size: 72px;
     font-weight: 500;
-    text-shadow: 10px;
+    text-shadow: 1px 2px #000000;
+    color: #E6B84D;
+    z-index: 100;
 }
 
 .get-started {
@@ -62,7 +71,7 @@ body, html{
     border-radius: 20px;
     font-size: 30px;
     padding: 20px;
-    background-color: #222222;
+    background-color: rgba(230, 184, 17, .9);
     cursor: pointer;
     transition: .2s;
     animation-fill-mode: forwards;
@@ -70,6 +79,7 @@ body, html{
     animation-duration: 2s;
     animation-delay: 1s;
     visibility: hidden;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .get-started-button:hover {
