--- a/personal-website/src/Loans/css/loan-input.css
+++ b/personal-website/src/Loans/css/loan-input.css
@@ -19,14 +19,14 @@
 .form-container {
     display: flex;
     justify-content: center;
-    width: 100%;
     height: 60%;
-    background-color: navy;
+    border-radius: 20px;
     overflow: auto;
     scroll-behavior: smooth;
     scrollbar-width: none;
     -ms-overflow-style: none;
     transition: scroll-behavior 0.5s ease-in-out;
+    font-size: 20px;
 }
 
 .form-container::-webkit-scrollbar {
@@ -39,8 +39,9 @@
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
-    background-color: green;
     border-radius: 9px;
+    background-color: lightgrey;
+    color: black;
 }
 
 .loan label {
@@ -62,7 +63,6 @@
     align-items: center;
     width: 100%;
     height: 20%;
-    background-color: green;
 }
 
 
@@ -71,4 +71,11 @@ button {
     padding: 20px;
     margin: 20px;
     border-radius: 20px;;
+}
+
+input[type=text] {
+    border-radius: 5px;
+    background-color: grey;
+    border: none;
+    height: 30px;
 }
